clusters/raspberrypi/apps/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - name: grocy
        image: lscr.io/linuxserver/grocy:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        nodeSelector:
          nodeName: murtagh
        ports:
        - containerPort: 9283
        volumeMounts:
        - mountPath: /var/www/data
          name: grocy-pvc
      volumes:
      - name: grocy-pvc
        persistentVolumeClaim:
          claimName: grocy-pvc
