clusters/raspberrypi/apps/grocy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: grocy
spec:
  defaultBackend:
    service:
      name: grocy
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - grocy
